--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
