--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
+    "react-select": "^3.2.0",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
