--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "react-select": "^3.2.0",
     "reactjs-popup": "^2.0.5",
