--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
-    "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
   },
