--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
     "react-select": "^3.2.0",
+    "react-table": "^7.8.0",
     "reactjs-popup": "^2.0.5",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
